// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractiveHeader does render nav menu button if not in narrow mode 1`] = `
<Header
  deps={null}
  farItems={
    <GearOptionsButtonComponent
      deps={null}
      featureFlagData={null}
    />
  }
  items={
    <FlaggedComponent
      disableJSXElement={
        <Switcher
          deps={null}
          pivotKey={2}
          styles={
            Object {
              "dropdownClassName": "headerSwitcherDropdown",
              "dropdownOptionClassName": "switcherDropdownOption",
              "switcherClassName": "headerSwitcher",
            }
          }
        />
      }
      enableJSXElement={null}
      featureFlag="reflowUI"
      featureFlagStoreData={null}
    />
  }
  navMenu={
    <test-nav-menu
      isSideNavOpen={false}
      setSideNavOpen={null}
    />
  }
/>
`;

exports[`InteractiveHeader render: tabClosed is false 1`] = `
<Header
  deps={
    Object {
      "dropdownClickHandler": Object {},
    }
  }
  farItems={
    <GearOptionsButtonComponent
      deps={
        Object {
          "dropdownClickHandler": Object {},
        }
      }
      featureFlagData={
        Object {
          "test-flag": true,
        }
      }
    />
  }
  items={
    <FlaggedComponent
      disableJSXElement={
        <Switcher
          deps={
            Object {
              "dropdownClickHandler": Object {},
            }
          }
          pivotKey={2}
          styles={
            Object {
              "dropdownClassName": "headerSwitcherDropdown",
              "dropdownOptionClassName": "switcherDropdownOption",
              "switcherClassName": "headerSwitcher",
            }
          }
        />
      }
      enableJSXElement={null}
      featureFlag="reflowUI"
      featureFlagStoreData={
        Object {
          "test-flag": true,
        }
      }
    />
  }
  navMenu={null}
/>
`;

exports[`InteractiveHeader render: tabClosed is true 1`] = `
<Header
  deps={
    Object {
      "dropdownClickHandler": Object {},
    }
  }
/>
`;
